unpackaged/main/default/objects/Account/fields/Num_Open_Services_Pipeline_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Num_Open_Services_Pipeline_Opportunities__c</fullName>
    <description>Rollup of the total open S2 Professional Services Opportunities at the Account.</description>
    <inlineHelpText>Rollup of the total open S2 Professional Services Opportunities at the Account.</inlineHelpText>
    <label># Open Services Pipeline Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.IsClosed</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Professional Services</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Sales_Qualified_At__c</field>
        <operation>notEqual</operation>
        <value />
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>