unpackaged/main/default/objects/Account/fields/Num_Won_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Num_Won_Opportunities__c</fullName>
    <description>Total number of won Opportunities related to the Account in any business line.</description>
    <inlineHelpText>Total number of won Opportunities related to the Account in any business line.</inlineHelpText>
    <label># Won Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>