unpackaged/main/default/objects/Account/fields/Open_Committed_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Open_Committed_Opportunities__c</fullName>
    <description>Non rollup variant of the # of Open Committed Opportunities field (https://retool.lightning.force.com/lightning/setup/ObjectManager/Account/FieldsAndRelationships/00N5A00000IDwoe/view)


Updated via the Account - After Save Automations.
Currently used as a helper field in Contact - Before Save Automations to bypass a `Get Account` step.</description>
    <inlineHelpText>Non rollup variant of the # of Open Committed Opportunities field (https://retool.lightning.force.com/lightning/setup/ObjectManager/Account/FieldsAndRelationships/00N5A00000IDwoe/view)


Updated via the Account - After Save Automations.
Currently used as a helper field in Contact - Before Save Automations to bypass a `Get Account` step.</inlineHelpText>
    <label># Open Committed Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>