unpackaged/main/default/objects/Account/fields/Ops_Tag__c.field-meta.xml
<CustomField>
    <fullName>Ops_Tag__c</fullName>
    <description>Place for system stamped notes, or bulk upload details for RevOps.</description>
    <inlineHelpText>Place for system stamped notes, or bulk upload details for RevOps.</inlineHelpText>
    <label>Ops Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>