unpackaged/main/default/objects/Account/fields/Outbound_Tier__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Tier__c</fullName>
    <description>Tiers are purely a tool for internal organization.</description>
    <inlineHelpText>Tiers are purely a tool for internal organization; define and use as you&#39;d like!</inlineHelpText>
    <label>Outbound Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Tier 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>