unpackaged/main/default/objects/Account/fields/Outreach_Meeting_Booked__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Meeting_Booked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether or not a recent meeting has been booked from one of the related contacts at the account.</description>
    <inlineHelpText>Indicates whether or not a recent meeting has been booked from one of the related contacts at the account.</inlineHelpText>
    <label>Outreach: Meeting Booked?</label>
    <type>Checkbox</type>
</CustomField>