unpackaged/main/default/objects/Account/fields/Owner_Team__c.field-meta.xml
<CustomField>
    <fullName>Owner_Team__c</fullName>
    <description>Helper field that displays the Account Owner&#39;s Team. Used in Chilipiper Queue filter logic.

External Systems Utilization: Chili Piper</description>
    <formula>TEXT(Owner.Team__c)</formula>
    <inlineHelpText>Helper field that displays the Account Owner&#39;s Team. Used in Chilipiper Queue filter logic.</inlineHelpText>
    <label>Owner Team</label>
    <type>Text</type>
</CustomField>