unpackaged/main/default/objects/Account/fields/Partner_Sales__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the related Partner Sales record.</description>
    <inlineHelpText>Link to the related Partner Sales record.</inlineHelpText>
    <label>Partner Sales</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>