unpackaged/main/default/objects/Account/fields/Planning_Notes__c.field-meta.xml
<CustomField>
    <fullName>Planning_Notes__c</fullName>
    <description>Notes used for planning future Account transitions.</description>
    <inlineHelpText>Notes used for planning future Account transitions.</inlineHelpText>
    <label>Planning Notes</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>