unpackaged/main/default/objects/Account/fields/Planning_Revenue_Potential__c.field-meta.xml
<CustomField>
    <fullName>Planning_Revenue_Potential__c</fullName>
    <label>Planning Revenue Potential</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>