unpackaged/main/default/objects/Account/fields/Planning_Segment_CY__c.field-meta.xml
<CustomField>
    <fullName>Planning_Segment_CY__c</fullName>
    <description>Pending new Segment planned for the calendar year.</description>
    <inlineHelpText>Pending new Segment planned for the calendar year.</inlineHelpText>
    <label>Planning Segment CY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Segment</valueSetName>
    </valueSet>
</CustomField>