unpackaged/main/default/objects/Account/fields/Planning_Status__c.field-meta.xml
<CustomField>
    <fullName>Planning_Status__c</fullName>
    <description>Current status of future Account ownership, segment, region, territory transitions.</description>
    <inlineHelpText>Current status of future Account ownership, segment, region, territory transitions.</inlineHelpText>
    <label>Planning Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Finalized</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>