unpackaged/main/default/objects/Account/fields/Planning_Territory__c.field-meta.xml
<CustomField>
    <fullName>Planning_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the related Planning Territory record. Used internally for Account planning.</description>
    <inlineHelpText>Link to the related Planning Territory record. Used internally for Account planning.</inlineHelpText>
    <label>Planning Territory</label>
    <referenceTo>Operating_Plan_Territory__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>