unpackaged/main/default/objects/Account/fields/Prior_Owner__c.field-meta.xml
<CustomField>
    <fullName>Prior_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user that was the Account Owner immediately prior to the current Account Owner.</description>
    <inlineHelpText>The user that was the Account Owner immediately prior to the current Account Owner.</inlineHelpText>
    <label>Prior Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>