unpackaged/main/default/objects/Account/fields/Professional_Services__c.field-meta.xml
<CustomField>
    <fullName>Professional_Services__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Professional Services rep assigned to the Account.</description>
    <inlineHelpText>Professional Services rep assigned to the Account.</inlineHelpText>
    <label>Professional Services</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts7</relationshipName>
    <type>Lookup</type>
</CustomField>