unpackaged/main/default/objects/Account/fields/pw_ccpro__BillingLocationAccuracy__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__BillingLocationAccuracy__c</fullName>
    <label>Billing Location Accuracy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not checked</fullName>
                <default>true</default>
                <label>Not checked</label>
            </value>
            <value>
                <fullName>Not matched</fullName>
            </value>
            <value>
                <fullName>Parsed but not found</fullName>
            </value>
            <value>
                <fullName>Ambiguous</fullName>
            </value>
            <value>
                <fullName>Country</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Postal Code</fullName>
            </value>
            <value>
                <fullName>Premise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>