unpackaged/main/default/objects/Account/fields/pw_ccpro__ShippingAddressStatus__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__ShippingAddressStatus__c</fullName>
    <inlineHelpText>Verification status of the account&#39;s shipping address</inlineHelpText>
    <label>Shipping Address Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not checked</fullName>
                <default>true</default>
                <label>Not checked</label>
            </value>
            <value>
                <fullName>Not matched</fullName>
            </value>
            <value>
                <fullName>Parsed but not found</fullName>
            </value>
            <value>
                <fullName>Ambiguous</fullName>
            </value>
            <value>
                <fullName>Corrected</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>