unpackaged/main/default/objects/Account/fields/Reengage_Notes__c.field-meta.xml
<CustomField>
    <fullName>Reengage_Notes__c</fullName>
    <description>Context left by the rep who set the reengagement date.</description>
    <inlineHelpText>Context left by the rep who set the reengagement date.</inlineHelpText>
    <label>Reengage Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>