unpackaged/main/default/objects/Account/fields/Reengage_Status__c.field-meta.xml
<CustomField>
    <fullName>Reengage_Status__c</fullName>
    <description>Returns one of Past, Today, Future or Not Set based on the value of Reengage Date</description>
    <formula>IF(
 ISBLANK(Reengage_Date__c),
 &quot;Not set&quot;,
 IF(
  Reengage_Date__c = TODAY(),
  &quot;Today&quot;,
  IF(
   Reengage_Date__c &lt; TODAY(),
   &quot;Past&quot;,
   &quot;Future&quot;
  )
 )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Returns one of Past, Today, Future or Not Set based on the value of Reengage Date</inlineHelpText>
    <label>Reengage Status</label>
    <type>Text</type>
</CustomField>