unpackaged/main/default/objects/Account/fields/regieai__added_by_Regie__c.field-meta.xml
<CustomField>
    <fullName>regieai__added_by_Regie__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Added By Regie</label>
    <type>Checkbox</type>
</CustomField>