unpackaged/main/default/objects/Account/fields/regieai__Regie_Intent_Score__c.field-meta.xml
<CustomField>
    <fullName>regieai__Regie_Intent_Score__c</fullName>
    <description>This stores the current regie intent value based on prospecting interactions and optionally based on website visits and other intent platform data</description>
    <label>Regie Intent Score</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>