unpackaged/main/default/objects/Account/fields/Renewal_Manager__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Previously used to associate a Renewal Manager to the Account.</description>
    <inlineHelpText>Previously used to associate a Renewal Manager to the Account.</inlineHelpText>
    <label>Renewal Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts8</relationshipName>
    <type>Lookup</type>
</CustomField>