unpackaged/main/default/objects/Account/fields/ROE_Territory__c.field-meta.xml
<CustomField>
    <fullName>ROE_Territory__c</fullName>
    <description>Returns the current ROE Territory assigned to the Account. Used to ensure that reps are working Accounts that fall within their assigned territory.</description>
    <formula>CASE(Shipping_Region__c,
  &quot;AMER&quot;,&quot;ROW&quot;,
  &quot;EMEA&quot;,&quot;EUR&quot;,
  &quot;APAC&quot;,&quot;APAC&quot;,
 &quot;ROW&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Returns the current ROE Territory assigned to the Account.</inlineHelpText>
    <label>ROE Territory</label>
    <type>Text</type>
</CustomField>