unpackaged/main/default/objects/Account/fields/RollWorks_Aggregated_Account_Data__c.field-meta.xml
<CustomField>
    <fullName>RollWorks_Aggregated_Account_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RollWorks Aggregated Account Data</label>
    <referenceTo>adroll__RollWorks_Account__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>