unpackaged/main/default/objects/Account/fields/Run_geo_automations__c.field-meta.xml
<CustomField>
    <fullName>Run_geo_automations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run geo automations?</label>
    <type>Checkbox</type>
</CustomField>