unpackaged/main/default/objects/Account/fields/Sales_Development_Representative__c.field-meta.xml
<CustomField>
    <fullName>Sales_Development_Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SDR who is assigned to the Account record.

External Systems Utilization: Polytomic; LeanData; MadKudu</description>
    <inlineHelpText>SDR who is assigned to the Account record.</inlineHelpText>
    <label>Sales Development Representative</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AccountsJiYX</relationshipName>
    <type>Lookup</type>
</CustomField>