unpackaged/main/default/objects/Account/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description>The current business segment assigned to the Account.

External Systems Utilization: MadKudu</description>
    <inlineHelpText>The current business segment assigned to the Account</inlineHelpText>
    <label>Account Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Segment</valueSetName>
    </valueSet>
</CustomField>