unpackaged/main/default/objects/Account/fields/Shipping_Intermediate_Region__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Intermediate_Region__c</fullName>
    <description>Intermediate Region associated with the Shipping Address.</description>
    <inlineHelpText>Intermediate Region associated with the Shipping Address.</inlineHelpText>
    <label>Shipping Intermediate Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Geo_Intermediate_Region</valueSetName>
    </valueSet>
</CustomField>