unpackaged/main/default/objects/Account/fields/Shipping_Region__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Region__c</fullName>
    <description>Region associated with the Shipping Address.</description>
    <inlineHelpText>Region associated with the Shipping Address.</inlineHelpText>
    <label>Shipping Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Geo_Region</valueSetName>
    </valueSet>
</CustomField>