unpackaged/main/default/objects/Account/fields/Shipping_Subregion__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Subregion__c</fullName>
    <description>Subregion associated with the Shipping Address.</description>
    <inlineHelpText>Subregion associated with the Shipping Address.</inlineHelpText>
    <label>Shipping Subregion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Geo_Subregion</valueSetName>
    </valueSet>
</CustomField>