unpackaged/main/default/objects/Account/fields/Shipping_Territory__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Territory__c</fullName>
    <description>Territory associated with the Shipping Address.</description>
    <inlineHelpText>Territory associated with the Shipping Address.</inlineHelpText>
    <label>Shipping Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Role_Territory</valueSetName>
    </valueSet>
</CustomField>