unpackaged/main/default/objects/Account/fields/Super_Segment__c.field-meta.xml
<CustomField>
    <fullName>Super_Segment__c</fullName>
    <description>Returns the &#39;Super Segment&#39; categorization based on the Account Segment:
- GRWMMK/ENT: Corporate
- Strategic: Strategic
- GOV/EDU: SLED (State, Local, Education)</description>
    <formula>CASE(Segment__c,
 &quot;GRW&quot;,&quot;Corporate&quot;,
 &quot;MMK&quot;,&quot;Corporate&quot;,
 &quot;ENT&quot;,&quot;Corporate&quot;,
 &quot;STR&quot;,&quot;Strategic&quot;,
 &quot;GOV&quot;,&quot;SLED&quot;,
 &quot;EDU&quot;,&quot;SLED&quot;,
 NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Returns the &#39;Super Segment&#39; categorization based on the Account Segment:
- GRWMMK/ENT: Corporate
- Strategic: Strategic
- GOV/EDU: SLED (State, Local, Education)</inlineHelpText>
    <label>Super Segment</label>
    <type>Text</type>
</CustomField>