unpackaged/main/default/objects/Account/fields/Support_SLA__c.field-meta.xml
<CustomField>
    <fullName>Support_SLA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to related Support SLA record, which is indicative of the level of support provided to the customer.</description>
    <inlineHelpText>Link to related Support SLA record, which is indicative of the level of support provided to the customer.</inlineHelpText>
    <label>Support SLA</label>
    <referenceTo>Support_SLA__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>