unpackaged/main/default/objects/Account/fields/Suppress_Automations__c.field-meta.xml
<CustomField>
    <fullName>Suppress_Automations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables automatic updates on the Account record if checked TRUE.</description>
    <inlineHelpText>Disables automatic updates on the Account record if checked TRUE.</inlineHelpText>
    <label>Suppress Automations?</label>
    <type>Checkbox</type>
</CustomField>