unpackaged/main/default/objects/Account/fields/Suppress_Emails_to_Product_Signups__c.field-meta.xml
<CustomField>
    <fullName>Suppress_Emails_to_Product_Signups__c</fullName>
    <description>This will be mapped to Hubspot and used both SFDC and Hubspot side to avoid opting people in if the account has Stop Emails and a product signup happens.</description>
    <inlineHelpText>By checking this box, new product signups at this account will not opt contacts into marketing nor product communications (only get transaction emails like alerts).</inlineHelpText>
    <label>Stop Emails to Product Signups</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stop Emails</fullName>
            </value>
            <value>
                <fullName>Emails Ok</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>