unpackaged/main/default/objects/Account/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <description>List of Tags assigned to the Account record.

External Systems Utilization: DLRS; MadKudu</description>
    <inlineHelpText>List of Tags assigned to the Account record.</inlineHelpText>
    <label>Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Account_Tags</valueSetName>
    </valueSet>
</CustomField>