unpackaged/main/default/objects/Account/fields/TAM_Email__c.field-meta.xml
<CustomField>
    <fullName>TAM_Email__c</fullName>
    <description>Helper formula field which returns the TAM&#39;s email. Used in Hubspot.

External Systems Utilization: Hubspot</description>
    <formula>Technical_Account_Manager__r.Email</formula>
    <inlineHelpText>Helper formula field which returns the TAM&#39;s email. Used in Hubspot.</inlineHelpText>
    <label>TAM Email</label>
    <type>Text</type>
</CustomField>