unpackaged/main/default/objects/Account/fields/TAM_Name__c.field-meta.xml
<CustomField>
    <fullName>TAM_Name__c</fullName>
    <description>Helper formula field which returns the TAM&#39;s Full Name. Used in Hubspot.

External Systems Utilization: Hubspot</description>
    <formula>Technical_Account_Manager__r.FirstName &amp;&quot; &quot;&amp; Technical_Account_Manager__r.LastName</formula>
    <inlineHelpText>Helper formula field which returns the TAM&#39;s Full Name. Used in Hubspot.</inlineHelpText>
    <label>TAM Name</label>
    <type>Text</type>
</CustomField>