unpackaged/main/default/objects/Account/fields/Target_Account__c.field-meta.xml
<CustomField>
    <fullName>Target_Account__c</fullName>
    <description>Checked TRUE if the Account has been tagged as a Target Account.</description>
    <formula>IF(INCLUDES( Tags__c, &quot;FY25 Target Account&quot;), TRUE, FALSE)</formula>
    <inlineHelpText>Checked TRUE if the Account has been tagged as a Target Account.</inlineHelpText>
    <label>Target Account?</label>
    <type>Checkbox</type>
</CustomField>