unpackaged/main/default/objects/Account/fields/Technical_Account_Manager_Assigned_At__c.field-meta.xml
<CustomField>
    <fullName>Technical_Account_Manager_Assigned_At__c</fullName>
    <description>Technical Account Manager assigned to the Account.</description>
    <inlineHelpText>Technical Account Manager assigned to the Account.</inlineHelpText>
    <label>Technical Account Manager Assigned At</label>
    <type>DateTime</type>
</CustomField>