unpackaged/main/default/objects/Account/fields/Territory_Group__c.field-meta.xml
<CustomField>
    <fullName>Territory_Group__c</fullName>
    <description>Territory group (ENT-1, ENT-2) assigned to the Account. Used internally for Account planning.

External Systems Utilization: MadKudu</description>
    <inlineHelpText>Territory group (ENT-1, ENT-2) assigned to the Account. Used internally for Account planning.</inlineHelpText>
    <label>Territory Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>