unpackaged/main/default/objects/Account/fields/To_Be_Enriched__c.field-meta.xml
<CustomField>
    <fullName>To_Be_Enriched__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag used to indicate that the Account record needs enrichment.

External Systems Utilization: ZoomInfo</description>
    <inlineHelpText>Flag used to indicate that the Account record needs enrichment.</inlineHelpText>
    <label>To Be Enriched</label>
    <type>Checkbox</type>
</CustomField>