unpackaged/main/default/objects/Account/fields/Trigger_Round_Robin__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Round_Robin__c</fullName>
    <description>Enables manual trigger for re-assigning Account records owned by the Account Pool via LeanData following standard routing rules: https://retoolconfluence.atlassian.net/wiki/spaces/RO/pages/913965070/Salesforce+Contact+Account+Routing

External Systems Utilization: LeanData</description>
    <inlineHelpText>Enables manual trigger for re-assigning Account records owned by the Account Pool via LeanData following standard routing rules: https://retoolconfluence.atlassian.net/wiki/spaces/RO/pages/913965070/Salesforce+Contact+Account+Routing</inlineHelpText>
    <label>Trigger Round Robin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inbound SDR Only</fullName>
            </value>
            <value>
                <fullName>Outbound SDR Only</fullName>
            </value>
            <value>
                <fullName>AE Only</fullName>
            </value>
            <value>
                <fullName>AE /w Mapped SDR</fullName>
            </value>
            <value>
                <fullName>AE Only - Partner Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>