unpackaged/main/default/objects/Account/fields/Ultimate_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Returns the Account at the highest level of the parent/child hierarchy. Value is NULL if there are no associated Parent Account records.</description>
    <inlineHelpText>Returns the Account at the highest level of the parent/child hierarchy. Value is NULL if there are no associated Parent Account records.</inlineHelpText>
    <label>Ultimate Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>