unpackaged/main/default/objects/Account/fields/Ultimate_Parent_Account_ID_case_safe__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Parent_Account_ID_case_safe__c</fullName>
    <description>Helper field that returns the Account ID at the highest level of the parent/child hierarchy. Value is NULL if there are no associated Parent Account records.</description>
    <formula>CASESAFEID(Ultimate_Parent_Account__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Helper field that returns the Account ID at the highest level of the parent/child hierarchy. Value is NULL if there are no associated Parent Account records.</inlineHelpText>
    <label>Ultimate Parent Account ID (case safe)</label>
    <type>Text</type>
</CustomField>