unpackaged/main/default/objects/Account/fields/UniqueEntry__isRingLeadEnriched__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__isRingLeadEnriched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isRingLeadEnriched</label>
    <type>Checkbox</type>
</CustomField>