unpackaged/main/default/objects/Account/fields/UniqueEntry__RingLead_Enrichment_Result__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__RingLead_Enrichment_Result__c</fullName>
    <label>RingLead Enrichment Result</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>