unpackaged/main/default/objects/Account/fields/UniqueEntry__Ringlead_Id__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Ringlead_Id__c</fullName>
    <label>Ringlead Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>